# android_device_qiku_qk1605

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/example/android_jni_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/org/example/android_jni_demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/example/android_jni_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
